chore(*): ignore .json files for prettier and eslint

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "prepare": "husky install",
     "concat:stories": "gulp concat-stories-js && gulp concat-storybook-mdx",
     "update:version": "gulp replace-version",
-    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
-    "lint": "eslint --ignore-path .gitignore --ext .js,.ts .",
+    "format": "prettier --ignore-path .prettierignore  --write \"**/*.+(js|ts|json)\"",
+    "lint": "eslint --ignore-path .prettierignore --ext .js,.ts .",
     "lint:fix": "npm run lint -- --fix",
     "cem": "cem analyze --litelement ",
     "e2e-test": "node cypress/scripts/run_all.js & cypress open",
