--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,5 +23,13 @@
     "sort-exports/sort-exports": ["error", { "sortDir": "asc" }]
     // "jsx-quotes": [2, "prefer-single"],
   },
-  "ignorePatterns": ["**/*.js", "mocks", "**/*.mjs", "cypress", "cypress.config.ts", "**/*/icon-registry.ts"]
+  "ignorePatterns": [
+    "**/*.js",
+    "mocks",
+    "**/*.mjs",
+    "cypress",
+    "cypress.config.ts",
+    "**/*/icon-registry.ts",
+    "**/*.json"
+  ]
 }
