--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@govtechsg/sgds-web-component",
-  "version": "3.3.2-rc.0",
+  "version": "3.3.2",
   "description": "",
   "main": "lib/index.js",
   "module": "lib/index.js",
