--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@floating-ui/dom": "^1.7.4",
     "@lit/context": "^1.1.3",
     "@lit/react": "^1.0.6",
     "bootstrap": "^5.1.3",
