--- a/package.json
+++ b/package.json
@@ -43,6 +43,14 @@
     {
       "name": "clukhei",
       "url": "https://github.com/clukhei"
+    },
+    {
+      "name": "tonghauhive",
+      "url": "https://github.com/tonghauhive"
+    },
+    {
+      "name": "amandac628",
+      "url": "https://github.com/amandac628"
     }
   ],
   "license": "MIT",
