--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "importHelpers": true,
     "rootDir": "src",
     "allowJs": true,
-    "typeRoots": ["./src/typings", "./node_modules/@types"]
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["**/*.ts", "typings"],
   "exclude": ["node_modules", "lib", "test", "test-outdir", "mocks", "react", "cypress", "cypress.config.ts", "scripts"]
