build(sri): inject sri to cdn documentation

--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "build": "npm run build:react && rm -rf lib && rollup --config rollup.config.mjs && node ./scripts/frankBuild.js && npm run generate:icons",
     "build:react": "npm run cem && node ./scripts/makeReact.mjs",
     "build:readme": "gulp build-readme",
-    "write:stories": "npm run cem && node ./scripts/generateStories.mjs && npm run concat:stories && npm run update:version",
+    "write:stories": "npm run cem && node ./scripts/generateStories.mjs && npm run concat:stories && npm run update:docs",
     "write:component": "plop",
     "test": "rm -rf test-outdir && rollup --config rollup.test.config.js && web-test-runner",
     "test:scripts": "wtr scripts/**/__tests__/**/*.test.{js,ts} --node-resolve",
     "prepare": "husky install",
     "concat:stories": "gulp concat-stories-js && gulp concat-storybook-mdx",
-    "update:version": "gulp replace-version",
+    "update:docs": "gulp replace-version-and-sri",
     "format": "prettier --ignore-path .prettierignore  --write \"**/*.+(js|ts|json)\"",
     "lint": "eslint --ignore-path .prettierignore --ext .js,.ts .",
     "lint:fix": "npm run lint -- --fix",
@@ -25,8 +25,6 @@
     "e2e-test": "node cypress/scripts/run_all.js & cypress open",
     "storybook": "nodemon --exec \"npm run write:stories &&  STORYBOOK_ENV=development storybook dev -p 6006\" --watch stories/templates stories/getting-started -e js,mdx",
     "build-storybook": "npm run build && npm run write:stories && STORYBOOK_ENV=production storybook build",
-    "trial-sb": "storybook dev",
-    "trial-sb-build": "storybook build",
     "generate:icons": "node scripts/generateIconRegistry.js",
     "sync-figma-to-tokens": "tsx scripts/figma/sync-figma-to-tokens/sync-figma-to-tokens.ts"
   },
@@ -78,6 +76,7 @@
     "@playwright/test": "^1.45.1",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^5.0.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "@storybook/addon-essentials": "^8.2.6",
     "@storybook/addon-links": "^8.2.6",
     "@storybook/addon-mdx-gfm": "^8.2.8",
