--- a/cypress/apps/next-app/package.json
+++ b/cypress/apps/next-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@govtechsg/sgds-web-component": "file:../../../lib",
+    "@lit-labs/nextjs": "^0.2.4",
     "next": "15.5.3",
     "react": "19.1.1",
     "react-dom": "19.1.1"
