--- a/cypress/apps/react-19-app/package.json
+++ b/cypress/apps/react-19-app/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@govtechsg/sgds-web-component": "^3.2.0",
+    "@govtechsg/sgds-web-component": "file:../../../lib",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
