--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "VITE_ENV=development vite --open",
     "preview": "VITE_ENV=production vite --open",
-    "build": "npm run build:react && rm -rf lib && rollup --config rollup.config.mjs && node ./scripts/frankBuild.js && npm run generate:icons",
+    "build": "rm -rf lib && rollup --config rollup.config.mjs && node ./scripts/frankBuild.js && npm run generate:icons && npm run build:react",
     "build:react": "npm run cem && node ./scripts/makeReact.mjs",
     "build:readme": "gulp build-readme",
     "write:stories": "npm run cem && node ./scripts/generateStories.mjs && npm run concat:stories && npm run update:docs",
@@ -21,7 +21,7 @@
     "format": "prettier --ignore-path .prettierignore  --write \"**/*.+(js|ts|json)\"",
     "lint": "eslint --ignore-path .prettierignore --ext .js,.ts .",
     "lint:fix": "npm run lint -- --fix",
-    "cem": "cem analyze --litelement ",
+    "cem": "cem analyze --litelement",
     "e2e-test": "node cypress/scripts/run_all.js & cypress open",
     "storybook": "nodemon --exec \"npm run write:stories &&  STORYBOOK_ENV=development storybook dev -p 6006\" --watch stories/templates stories/getting-started -e js,mdx",
     "build-storybook": "npm run build && npm run write:stories && STORYBOOK_ENV=production storybook build",
@@ -54,6 +54,7 @@
   "license": "MIT",
   "dependencies": {
     "@floating-ui/dom": "^1.7.4",
+    "@govtechsg/sgds-web-component": "^3.5.3",
     "@lit/context": "^1.1.3",
     "@lit/react": "^1.0.6",
     "date-fns": "^3.3.1",
@@ -150,5 +151,6 @@
   "overrides": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
-  }
+  },
+  "customElements": "lib/custom-elements.json"
 }
