build(*): update workflow to run on master

--- a/.github/workflows/sync-to-gist.yml
+++ b/.github/workflows/sync-to-gist.yml
@@ -2,8 +2,7 @@ name: Sync to Lu Khei's Gist
 on:
   push:
     branches:
-      - '3.0.0-alpha' 
-      - 'lab'
+      - 'master' 
 jobs:
   Theme-Gist:
     runs-on: ubuntu-latest
