--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@govtechsg/sgds-web-component",
-  "version": "3.5.5",
+  "version": "3.5.6-rc.0",
   "description": "",
   "main": "lib/index.js",
   "module": "lib/index.js",
