--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ stats.html
 *storybook.log
 .env
 .github/.dp-cli
+build-storybook.log
+chromatic.log
+chromatic-build-*.xml
+chromatic-diagnostics.json
