--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "storybook": "nodemon --exec \"npm run write:stories &&  STORYBOOK_ENV=development storybook dev -p 6006\" --watch stories/templates stories/getting-started -e js,mdx",
     "build-storybook": "npm run build && npm run write:stories && STORYBOOK_ENV=production storybook build",
     "generate:icons": "node scripts/generateIconRegistry.js",
-    "sync-figma-to-tokens": "tsx scripts/figma/sync-figma-to-tokens/sync-figma-to-tokens.ts"
+    "sync-figma-to-tokens": "tsx scripts/figma/sync-figma-to-tokens/sync-figma-to-tokens.ts",
+    "chromatic": "chromatic"
   },
   "author": "GovTechSG",
   "contributors": [
@@ -99,6 +100,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.11.0",
     "cem-plugin-better-lit-types": "^0.2.0",
+    "chromatic": "^13.3.4",
     "cypress": "^13.6.0",
     "cypress-fail-on-console-error": "^5.0.3",
     "cz-conventional-changelog": "^3.3.0",
