--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,7 +1,7 @@
 name: "Chromatic"
 permissions:
   contents: read
-  
+
 on:
   issue_comment:
     types: [created]
@@ -10,7 +10,10 @@ jobs:
   chromatic:
     name: Run Chromatic
     runs-on: ubuntu-latest
-    if: github.event.pull_request.head.repo.full_name == github.repository.full_name
+    if: > 
+      github.event.issue.pull_request &&
+      github.event.pull_request.head.repo.full_name == github.repository.full_name &&
+      contains(github.event.comment.body, '/chromatic')
     steps:
       - name: Check if actor is repo admin
         id: permission
