--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@floating-ui/dom": "^1.7.4",
     "@lit/context": "^1.1.3",
     "@lit/react": "^1.0.6",
+    "@wc-toolkit/cem-inheritance": "^1.2.2",
     "date-fns": "^3.3.1",
     "imask": "^7.4.0",
     "lit": "^3.1.4",
