--- a/amplify.yml
+++ b/amplify.yml
@@ -4,7 +4,7 @@ frontend:
     preBuild:
       commands:
         - corepack enable
-        - rm -rf node_modules && pnpm install --frozen-lockfile
+        - rm -rf node_modules && pnpm install
         - pnpm exec playwright install
     build:
       commands:
