--- a/.github/workflows/publish-latest.yml
+++ b/.github/workflows/publish-latest.yml
@@ -26,6 +26,6 @@ jobs:
       - run: pnpm exec playwright install  
       - run: pnpm run test
       - run: pnpm run build
-      - run: pnpm publish --tag latest ./lib --access public
+      - run: pnpm publish --no-git-checks --tag latest ./lib --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
