--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -8,8 +8,7 @@ on:
 
 jobs:
   chromatic:
-    name: Run Chromatic
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: > 
       github.event.issue.pull_request &&
       github.event.pull_request.head.repo.full_name == github.repository.full_name &&
@@ -41,12 +40,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v4
         with:
-          node-version: 22.20.0
+          version: 10.26.2
       - name: Install dependencies
         # ⚠️ See your package manager's documentation for the correct command to install dependencies in a CI environment.
-        run: npm ci
+        run: pnpm install
       - name: Run Chromatic
         uses: chromaui/action@latest
         with:
