--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -46,7 +46,7 @@ jobs:
       - uses: pnpm/action-setup@v4
       - name: Install dependencies
         # ⚠️ See your package manager's documentation for the correct command to install dependencies in a CI environment.
-        run: pnpm install --no-frozen-lockfile
+        run: pnpm install
       - name: Run Chromatic
         uses: chromaui/action@latest
         with:
