--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -3,7 +3,7 @@ permissions:
   contents: read
 
 on:
-  issue_comment:
+  pull_request_review_comment:
     types: [created]
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
       matrix:
         node-version: [22.18.0]
     if: > 
-      github.event.issue.pull_request &&
+      github.event.pull_request &&
       github.event.pull_request.head.repo.full_name == github.repository.full_name &&
       contains(github.event.comment.body, '/chromatic')
     steps:
@@ -43,10 +43,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.issue.pull_request.head.sha }}
-      - name: Verify checkout
+      - name: Verify checkout commit
         run: |
-          echo ">>>>GitHub Event Pull Request Head SHA: ${{ github.event.issue.pull_request.head.sha }}"
           echo ">>>>Checked out commit: $(git rev-parse HEAD)"
       - uses: pnpm/action-setup@v4
       - name: Install dependencies
