--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -3,7 +3,7 @@ permissions:
   contents: read
 
 on:
-  pull_request_review_comment:
+  issue_comment:
     types: [created]
 
 jobs:
@@ -41,8 +41,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.issue.pull_request.head.ref }}
+        env: 
+           CHROMATIC_BRANCH: ${{ github.event.issue.pull_request.head.ref || github.ref_name }}
+           CHROMATIC_SHA: ${{ github.event.issue.pull_request.head.sha || github.ref }}
+           CHROMATIC_SLUG: ${{ github.repository }}      
       - name: Verify checkout
         run: |
+          echo ">>>>GitHub Event Pull Request Head SHA: ${{ github.event.issue.pull_request.head.ref }}"
           echo ">>>>Checked out commit: $(git rev-parse HEAD)"
       - uses: pnpm/action-setup@v4
       - name: Install dependencies
