--- a/.github/workflows/publish-latest.yml
+++ b/.github/workflows/publish-latest.yml
@@ -6,6 +6,7 @@ on:
   push:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
+      - 'v[0-9]+.[0-9]+.[0-9]+-rc.[0-9]+'
 
 jobs:
   publish:    
@@ -17,6 +18,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install pnpm
         uses: pnpm/action-setup@v4
+      - name: Set Tag env
+        run: echo "NPM_TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
@@ -28,6 +31,8 @@ jobs:
       - run: pnpm exec playwright install  
       - run: pnpm run test
       - run: pnpm run build
+      - run: pnpm publish --no-git-checks --tag rc ./lib --access public
+        if: contains(env.NPM_TAG, 'rc')
       - run: pnpm publish --no-git-checks --tag latest ./lib --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
