ci(publish): combine publish workflow to one file

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,5 +34,6 @@ jobs:
       - run: pnpm publish --no-git-checks --tag rc ./lib --access public
         if: contains(env.NPM_TAG, 'rc')
       - run: pnpm publish --no-git-checks --tag latest ./lib --access public
+        if: "!contains(env.NPM_TAG, 'rc')"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
