--- a/cypress/apps/react-19-app/package.json
+++ b/cypress/apps/react-19-app/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@govtechsg/sgds-web-component": "file:../../../lib",
+    "@govtechsg/sgds-web-component": "3.6.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
