--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "convert:icons": "node scripts/convertIcons.js && pnpm run generate:icons",
     "generate:icons": "node scripts/generateIconRegistry.js",
     "sync-figma-to-tokens": "tsx scripts/figma/sync-figma-to-tokens/sync-figma-to-tokens.ts",
-    "chromatic": "chromatic "
+    "chromatic": "chromatic",
+    "utility": "tailwindcss -i ./src/css/utility.css -o ./lib/css/utility.css --config tailwind.config.js"
   },
   "author": "GovTechSG",
   "contributors": [
@@ -87,6 +88,8 @@
     "@storybook/blocks": "^8.2.7",
     "@storybook/web-components": "^8.2.6",
     "@storybook/web-components-vite": "^8.2.6",
+    "@tailwindcss/cli": "^4.1.18",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/mocha": "^10.0.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
@@ -138,6 +141,7 @@
     "rollup-plugin-visualizer": "^5.9.2",
     "sinon": "^21.0.1",
     "storybook": "^8.6.15",
+    "tailwindcss": "^4.1.18",
     "tsx": "^4.20.4",
     "typescript": "^5.0.4",
     "vite": "^4.4.9"
