--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -57,7 +57,7 @@ jobs:
         with: 
             version: 10
       - name: Install dependencies
-        # ⚠️ See your package manager's documentation for the correct command to install dependencies in a CI environment.
+        # ⚠️ See your package manager's documentation for the correct command to install dependencies in a CI 
         run: pnpm install
       - name: Run Chromatic
         uses: chromaui/action@latest
