--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
-    "@wc-toolkit/cem-inheritance": "^1.2.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/register": "^7.21.0",
     "@chromatic-com/storybook": "^1.6.1",
@@ -90,6 +89,7 @@
     "@types/mocha": "^10.0.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
+    "@wc-toolkit/cem-inheritance": "^1.2.2",
     "@web/dev-server-esbuild": "^0.3.6",
     "@web/test-runner": "^0.17.1",
     "@web/test-runner-commands": "^0.6.5",
@@ -128,6 +128,7 @@
     "prettier": "^2.8.7",
     "react": "^19.2.3",
     "remark-gfm": "^4.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-generate-package-json": "^3.2.0",
