--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "generate:icons": "node scripts/generateIconRegistry.js",
     "sync-figma-to-tokens": "tsx scripts/figma/sync-figma-to-tokens/sync-figma-to-tokens.ts",
     "chromatic": "chromatic",
-    "utility:dev": "tailwindcss -i ./src/css/utility.css -o ./playground/css/utility.css --config tailwind.config.js",
+    "utility:dev": "tailwindcss -i ./src/css/utility.css -o ./playground/css/utility.css --config tailwind.config.js --watch",
     "utility:storybook": "tailwindcss -i ./src/css/utility.css -o ./.storybook/utility.css --config tailwind.config.js"
   },
   "author": "GovTechSG",
@@ -68,7 +68,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
-    "@wc-toolkit/cem-inheritance": "^1.2.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/register": "^7.21.0",
     "@chromatic-com/storybook": "^1.6.1",
@@ -91,9 +90,11 @@
     "@storybook/web-components-vite": "^8.2.6",
     "@tailwindcss/cli": "^4.1.18",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/mocha": "^10.0.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
+    "@wc-toolkit/cem-inheritance": "^1.2.2",
     "@web/dev-server-esbuild": "^0.3.6",
     "@web/test-runner": "^0.17.1",
     "@web/test-runner-commands": "^0.6.5",
