test(*): testing on react vite app

--- a/cypress/apps/react-19-app/package.json
+++ b/cypress/apps/react-19-app/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@govtechsg/sgds-web-component": "file:../../../lib",
+    "@tailwindcss/vite": "^4.1.18",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
