--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,8 +31,10 @@ jobs:
       - run: pnpm exec playwright install  
       - run: pnpm run test
       - run: pnpm run build
-      - run: NODE_AUTH_TOKEN="" pnpm publish --no-git-checks --tag rc ./lib --access public
+      - run: pnpm publish --no-git-checks --tag rc ./lib --access public
         if: contains(env.NPM_TAG, 'rc')
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: pnpm publish --no-git-checks --tag latest ./lib --access public
         if: "!contains(env.NPM_TAG, 'rc')"
         env:
