--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@ build-storybook.log
 chromatic.log
 chromatic-build-*.xml
 chromatic-diagnostics.json
-
+.storybook/utility.css
 # macOS
 .DS_Store
